  repository, or a cvsweb or viewcvs URL, followed by a space,
  followed by the CVSROOT.  Other repository types, such as pserver
  CVS, BitKeeper, or Subzero can be added in the future.

  For example, when reviewing a codestriker change, the repository
  would be set as:

  http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi /cvsroot

Version 1.6.0

* Modified to use the "Template Toolkit" so that the HTML pages can be
  easily customised without modifying any perl code.  The templates
  live in template/en/default, where they can be modified in-place.

* Modified the Apache configuration instructions to use <Directory>
  instead of <Location>.  Also modified so that the copying of the CSS
  file into the site's main HTML area is no longer necessary, by using
  an additional <Directory> directive.

Version 1.5.7

* Set the attachment field in the HTTP header when downloading the
  topic text, to make IE happier, as the filename topicXXXX.txt.

* Handle CVS diffs which have whitespace at the start of the review.

Version 1.5.6

* Codestriker has been integrated with LXR, so that when viewing a
  code review, those identifiers known to LXR will be automatically
  hyperlinked.  This is an enormous aid to the code reviewing process,
  as you can quickly determine where a variable/function/method/class
  is defined and where it is used quickly, while studying the proposed
  changes.

  See the README file for setting up LXR integration.

  The LXR home page is located at http://lxr.sourceforge.net.  The
  integration has been tested with version 0.9.2.

  Note the codestriker.css file has been modified slightly to support
  LXR.  Make sure you update this file if using LXR.

Version 1.5.5 (if upgrading, make sure you run checksetup.pl, see below):

* Modified database schema for MySQL so that review text is not
  limited to 64KB, but up to 24MB, by changing certain fields from
  type "text" to "mediumtext".  PostgreSQL and other databases are not