@@ -76,6 +76,10 @@ $allow_delete = 1;
 # useful for "anonymous" installations of codestiker.
 $allow_searchlist = 1;
 
+# If true, don't display any email addresses in their true form, to beat
+# SPAM engines.
+$antispam_email = 0;
+
 # Default width of tabs.  Most developers expect this to be 8, but
 # some expect to see 4.  This is also stored in the user's cookie, and
 # can be changed dynamically on the view topic screen.
